--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <ListView
         android:id="@+id/listview"
-        android:layout_width="400dp"
-        android:layout_height="525dp"
+        android:layout_width="wrap_content"
+        android:layout_height="455dp"
         android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonPairedDevices"
         app:layout_constraintEnd_toEndOf="parent"
